Fixed saving issues. Added ControllerAdvisor with more robust failed request explanations in development mode (local profile). Added README.md.

--- a/java/src/main/resources/application-local.yaml
+++ b/java/src/main/resources/application-local.yaml
@@ -4,3 +4,10 @@ spring:
     username: user
     password: password
 
+logging:
+  level:
+    com.actdet.backend: DEBUG
+
+activity-detector:
+  controllers:
+    show-error-details-in-response: true
